		- You can create custom FileServiceProviders to work with 3rd party serialization libraries or code your own file operations logic

+ Added example project for VB.NET
+ Added method to GraphArea to show/hide vertex labels
+ Improvement: GXLogicCore expected concrete class as TGraph (thanks to stefanpe)
+ Removed redundant dependencies (reworked some dependencies)
+ Implemented many small tweaks and optimizations during the port process
+ Implemented ITrackableContent interface that helps to abstract from direct GraphArea links in ZoomControl
+ GraphArea::ComputeEdgeRoutesByVertex() method made internal. If you still need it please use LogicCore::ComputeEdgeRoutesByVertex().
+ Renamed method SaveIntoFile to SerializeToFile
+ Renamed method LoadFromFile to DeserializeFromFile
+ Set (0,0) coordinate by default for all custom objects newly added to GraphArea
+ Fixed edges after storage state loading
+ Fixed LinLog, KK, ISOM, FR algorithms display when there is only one vertex
+ Fixed overlap removal algorithm loading with incorrect parameters
+ Fixed edge labels positioning

PCL-IMPROVEMENTS
- Added YAXLib v2.13 project sources splitted into 2 different projects: main and PCL compliant (for attributes to be availbale in PCL libraries)
- Implemented PCL version of GraphX.Common
- Implemented PCL version of GraphX.Logic
- Implemented GraphX.WPF.Controls platform-specific library


RELEASE 2.0.2
+ Added vertex control labels with following functionality:
	+ 2 available positioning modes: by sides or by coordinates
	+ Always attached to vertex and moves with it
	+ Rotation angle support
	+ Same template logic as in EdgeLabelControl
+ Added key modifiers to vertex event args
+ Added XAML templates usage example in WF project
+ Added new layout type Custom. When set layout algorithm calculation is skipped completely and manually added data is used for OR and ER algorithms (if any).